# low_latency_inference_gpu

./: CMakeLists.txt  Readme.md  build.sh
include/: bench_utils.h  net_config.h
include/ll/: dense_mbyv.cuh  dense_mbyv_packed.cuh  dense_persistent.cuh  dense_warp.cuh  mbyv.cuh  pack_weights.cuh  utils.cuh  weights_storage.cuh
src/: bench_cublas_mlp.cu  bench_cublas_mlp_graph.cu  bench_custom_mbyv_mlp.cu  bench_custom_mbyv_mlp_graph.cu  bench_custom_mbyv_packed_graph.cu  bench_custom_warp_e2e.cu  bench_custom_warp_mlp.cu  bench_custom_warp_mlp_graph.cu  bench_main.cu  bench_persistent_cublas_mlp.cu  bench_persistent_mbyv_mlp.cu  bench_persistent_mlp.cu
